test/typecheck/bad-global-type-mismatch.txt
;;; ERROR: 1
(module
  (global i32 (f32.const 1)))
(;; STDERR ;;;
out/test/typecheck/bad-global-type-mismatch.txt:3:16: error: type mismatch at global initializer expression. got f32, expected i32
  (global i32 (f32.const 1)))
               ^^^^^^^^^^^
;;; STDERR ;;)
